fixed experience spacing

--- a/index.css
+++ b/index.css
@@ -321,7 +321,7 @@ body {
 
 .timeline__item:nth-child(odd) {
 	margin-top: 20px;
-	margin-bottom: -100px
+	margin-bottom: 20px
 }
 
 @media (min-width: 768px) {
